@@ -44,7 +44,6 @@ TODO: Define a maximum QSO upload rate to clublog to avoid excesive API usage.
 KLog 0.9.2
 TODO: When importing an ADIF file with several logs, create automatically the logs as detected.
 TODO: Remove all not needed fields from SetupPageLogNew::gatherAndSend() the type is enough
-TODO: Add an option to auto-complete info (QTH, Locator, Name, QSL Manager(qsl_via), IOTA, AWARD, Entity...) from previously worked QSO.
 TODO: Run in memory
 TODO: Keep adapting to ADIF 3.0.4
 
